--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./StopWatch/css/main.css">
     <title>T R Í</title>
 </head>
 
 <body>
     <div class="container">
         <div class="StopWatch">
-            <a href="./StopWatch/stopWatch.html">StopWatch</a>
+            <a href="./StopWatch/stopWatch.html">
+                <img src="./img/R.png" alt="">
+            </a>
         </div>
         <div class="Calc">
-            <a href=""></a>
+            <a href="./Calc/calc.html">
+                <img src="./img/calc.jpg" alt="">
+            </a>
         </div>
     </div>
     <script src="../js/app.js"></script>
