--- a/Calc/calc.html
+++ b/Calc/calc.html
@@ -11,10 +11,83 @@
 
 <body>
     <div class="app">
-        <div class="caculature">
-            
+        <div class="calculator">
+            <div class="display">
+                <div class="content">
+                    <div class="input"></div>
+                    <div class="output"></div>
+                </div>
+            </div>
+            <div class="keys">
+                <!-- row 1 -->
+                <div data-value="clear" class="key action">
+                    <span>AC</span>
+                </div>
+                <div data-value="brackets" class="key action">
+                    <span>( )</span>
+                </div>
+                <div data-value="%" class="key action">
+                    <span>%</span>
+                </div>
+                <div data-value="/" class="key operator">
+                    <span>÷</span>
+                </div>
+                <!-- Row 2 -->
+                <div data-value="7" class="key">
+                    <span>7</span>
+                </div>
+                <div data-value="8" class="key">
+                    <span>8</span>
+                </div>
+                <div data-value="9" class="key">
+                    <span>9</span>
+                </div>
+                <div data-value="*" class="key operator">
+                    <span>x</span>
+                </div>
+                <!-- row 3 -->
+                <div data-value="4" class="key">
+                    <span>4</span>
+                </div>
+                <div data-value="5" class="key">
+                    <span>5</span>
+                </div>
+                <div data-value="6" class="key">
+                    <span>6</span>
+                </div>
+                <div data-value="-" class="key operator">
+                    <span> - </span>
+                </div>
+                <!-- row 4 -->
+                <div data-value="1" class="key">
+                    <span>1</span>
+                </div>
+                <div data-value="2" class="key">
+                    <span>2</span>
+                </div>
+                <div data-value="3" class="key">
+                    <span>3</span>
+                </div>
+                <div data-value="+" class="key operator">
+                    <span> + </span>
+                </div>
+                <!-- row 5 -->
+                <div data-value="backspace" class="key action">
+                    <span>&lt;</span>
+                </div>
+                <div data-value="0" class="key">
+                    <span>0</span>
+                </div>
+                <div data-value="." class="key">
+                    <span>.</span>
+                </div>
+                <div data-value="=" class="key operator">
+                    <span> = </span>
+                </div>
+            </div>
         </div>
     </div>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
